# adventofcode-solutions

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  common.h
2015/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day07.example  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp  day25.example
2021/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
2022/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day12.example  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp  day25.cpp
2023/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day13.example2  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day21.cpp  day22.cpp  day23.cpp  day24.cpp
2024/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp  day13.cpp  day14.cpp  day15.cpp  day16.cpp  day17.cpp  day18.cpp  day19.cpp  day20.cpp  day22.cpp  day24.cpp  day25.cpp
2025/: CMakeLists.txt  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  day06.cpp  day07.cpp  day08.cpp  day09.cpp  day10.cpp  day11.cpp  day12.cpp
common/: algorithm.h  assert.h  common.h  compiler.h  concepts.h  flat.h  graph.h  grid.h  math.h  md5.h  module-aoc-std.cpp  module-aoc.cpp  module.cpp  point.h  print.h  range_to.h  ranges.h  ratio.h  rust.h  static_vector.h  string.h  timer.h  utility.h
rust/: CMakeLists.txt  Cargo.toml  Cargo.toml.in
rust/2015/: CMakeLists.txt  Cargo.toml
rust/2015/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
rust/2021/: CMakeLists.txt
rust/2021/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
rust/2022/: CMakeLists.txt
rust/2022/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs
rust/2023/: CMakeLists.txt
rust/2023/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs
rust/2024/: CMakeLists.txt
rust/2024/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day18.rs  day19.rs  day22.rs
rust/2025/: CMakeLists.txt
rust/2025/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
rust/utils/: CMakeLists.txt  Cargo.toml  build.rs  lib.rs.in
rust/utils/src/: algorithm.rs  closed_range.rs  dijkstra.rs  direction.rs  file.rs  grid.rs  iter.rs  math.rs  md5.rs  nd_point.rs  point.rs  string.rs  testing.rs
scripts/: clang-format.sh  scrape-inputs.sh
